tests/errors/calls/overload-wrong-arg-count.fn
---
Description: Function call with wrong number of arguments
Expected: FN3403
---

type Program
{
    static fn Combine(a: i32, b: i32) -> i32
    {
        return a
    }

    fn Main -> i32
    {
        return Combine(5)
    }
}
